# rsomics-bed-sample

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bed_sample.rs  bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
